# deimos.md

./: Cargo.toml  README.md  SPEC.md
examples/: index.proteus.md
src/: lex.rs  lib.pest  lib.rs  parser.rs
