[package]
name = "proteus"
description = "an extensible MarkDown format for every purpose"
version = "0.0.1"
authors = ["hvlck <just.ethan@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/hvlck/proteus"
repository = "https://github.com/hvlck/proteus"
license = "MIT"
publish = false

[dependencies]
pest = "~2.1.3"
pest_derive = "~2.1.0"
