[package]
name = "deimos"
description = "an extensible MarkDown format for every purpose"
version = "0.0.1"
authors = ["hvlck <just.ethan@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/hvlck/deimos"
repository = "https://github.com/hvlck/deimos"
license = "Apache-2.0"
publish = false

[dependencies]
pest = "~2.1.3"
pest_derive = "~2.1.0"
